[tool.poetry]
name = "zhlib"
version = "0.1.3"
description = "Dictionaries and what to learn in Chinese"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
jieba = "^0.39.0"
wordfreq = "^2.2"
peewee = "^3.7"
cjkradlib = "^0.1.2"
requests = "^2.20"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
tqdm = "^4.28"
prettyprinter = "^0.14.0"
